--- a/publication.html
+++ b/publication.html
@@ -1,125 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>S-Lab</title>
-<meta charset="utf-8">
-<link href="css/reset.css" rel="stylesheet" type="text/css" />
-<link href="css/layout.css" rel="stylesheet" type="text/css" />
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97";
-  var s = document.getElementsByTagName("script")[0];
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="js/cufon-yui.js"></script>
-<script type="text/javascript" src="js/FuturisExtra_400.font.js"></script>
-<script type="text/javascript" src="js/cufon-replace.js"></script>
-<!--[if lt IE 7]>
+  <title>S-Lab</title>
+  <meta charset="utf-8">
+  <link href="css/reset.css" rel="stylesheet" type="text/css" />
+  <link href="css/layout.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?7b04bc59130b63646c29f35485a86d97";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+  <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="js/cufon-yui.js"></script>
+  <script type="text/javascript" src="js/FuturisExtra_400.font.js"></script>
+  <script type="text/javascript" src="js/cufon-replace.js"></script>
+  <!--[if lt IE 7]>
      <script type="text/javascript" src="js/ie_png.js"></script>
      <script type="text/javascript">
      ie_png.fix('.png, #twitter, .carousel-box button.prev, .carousel-box button.next');
      </script>
      <link href="css/ie/ie6.css" rel="stylesheet" type="text/css" />
    <![endif]-->
-<!--[if IE]>
+  <!--[if IE]>
       <script type="text/javascript" src="js/html5.js"></script>
    <![endif]-->
 </head>
+
 <body id="page2">
-<div id="tail-top-right"></div>
-<div id="main-tail-ver">
-  <div id="main-tail-top">
-    <div id="main-bg-top">
-      <div id="main">
-        <!-- header -->
-        <div id="header-bg">
-          <header>
-            <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id=""></a>  </header>
-        </div>
-        <!-- content -->
-        <div id="content-bg">
-          <section id="content">
-            <div id="indent">
-              <div class="wrapper">
-                <article id="column-left">
-                  <nav>
-                    <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="people.html">People</a></li>
-                      <li  class="act"><a href="publication.html">Publication</a></li>
-                      <li ><a href="projects.html">Projects</a></li>
-                      <li><a href="seminar.html">Group seminar</a></li>
-                      <li><a href="recruitment.html">Recruitment</a></li>
-                      <li><a href="life.html">Life</a></li>
-                      <li><a href="contacts.html">Contacts</a></li>
-                    </ul>
-                  </nav>
+  <div id="tail-top-right"></div>
+  <div id="main-tail-ver">
+    <div id="main-tail-top">
+      <div id="main-bg-top">
+        <div id="main">
+          <!-- header -->
+          <div id="header-bg">
+            <header>
+              <h1>
+                <a href="index.html">
+                  <span>webstudio</span>
+                </a>
+              </h1>
+              <a href="#" id=""></a>
+            </header>
+          </div>
+          <!-- content -->
+          <div id="content-bg">
+            <section id="content">
+              <div id="indent">
+                <div class="wrapper">
+                  <article id="column-left">
+                    <nav>
+                      <ul>
+                        <li>
+                          <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                          <a href="about.html">About</a>
+                        </li>
+                        <li>
+                          <a href="people.html">People</a>
+                        </li>
+                        <li class="act">
+                          <a href="publication.html">Publication</a>
+                        </li>
+                        <li>
+                          <a href="projects.html">Projects</a>
+                        </li>
+                        <li>
+                          <a href="seminar.html">Group seminar</a>
+                        </li>
+                        <li>
+                          <a href="recruitment.html">Recruitment</a>
+                        </li>
+                        <li>
+                          <a href="life.html">Life</a>
+                        </li>
+                        <li>
+                          <a href="contacts.html">Contacts</a>
+                        </li>
+                      </ul>
+                    </nav>
                   </article>
-                <article id="column-right">
-                  <div class="content-box">
-                    <div class="tail">
-                      <div class="top">
-                        <div class="bot">
-                          <div class="inner">
-                            <div class="wrapper">
-                              <h4> &bull; <a href="publication.html">2018</a> &nbsp;  &bull;  <a href="publication_2017.html">2017</a> &nbsp;  &bull; <a href="publication_2016.html">2016 &nbsp;</a> &nbsp; &bull; <a href="publication_2015.html"> 2015</a> &nbsp; &bull; <a href="publication_2014.html"> 2014 and before</a></h4>
-                               <div class="clear"></div>
+                  <article id="column-right">
+                    <div class="content-box">
+                      <div class="tail">
+                        <div class="top">
+                          <div class="bot">
+                            <div class="inner">
                               <div class="wrapper">
+                                <h4> &bull;
+                                  <a href="publication.html">2018</a> &nbsp; &bull;
+                                  <a href="publication_2017.html">2017</a> &nbsp; &bull;
+                                  <a href="publication_2016.html">2016 &nbsp;</a> &nbsp; &bull;
+                                  <a href="publication_2015.html"> 2015</a> &nbsp; &bull;
+                                  <a href="publication_2014.html"> 2014 and before</a>
+                                </h4>
+                                <div class="clear"></div>
+                                <div class="wrapper">
                                   <h4 class="extra">2018</h4>
-<p>---------------------------  Journal Papers  ---------------------------</p>
-<p>1. Xiaobo Wang, Shifeng Zhang, Zhen Lei, Si Liu, Xiaojie Guo, Stan Z. Li, Ensemble Soft-Margin Softmax Loss for Image Classification, IJCAI 2018[<a href="pdf/ijcai_2018.pdf">Full paper</a>]</p>
-<p>2. Si Liu, Zhen Wei, Yao Sun, Xinyu Ou, Junyu Lin, Bin Liu, Ming-Hsuan Yang, Composing Semantic Collage for Image RetargetingComposing Semantic Collage for Image Retargeting, TIP 2018[<a href="pdf/tip18_retarget_3.31.pdf">Full paper</a>]</p>
- <p>------------------------ Conference Papers ------------------------</p>
-<p> 1. Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018[<a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
-<p> 2. Zhen Wei, Yao Sun, Junyu Lin, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, Computational Visual Media 2018[<a href="pdf/CVM camera-ready.pdf">Full paper</a>]</p>
-                             </div>
-                              <div class="clear"></div>
+                                  <p>--------------------------- Journal Papers ---------------------------</p>
+                                  <p>1. Si Liu, Zhen Wei, Yao Sun, Xinyu Ou, Junyu Lin, Bin Liu, Ming-Hsuan Yang, Composing
+                                    Semantic Collage for Image RetargetingComposing Semantic Collage for Image Retargeting,
+                                    TIP 2018[
+                                    <a href="pdf/tip18_retarget_3.31.pdf">Full paper</a>]</p>
+                                  <p>------------------------ Conference Papers ------------------------</p>
+                                  <p> 1. Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain
+                                    Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018[
+                                    <a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
+                                  <p> 2. Zhen Wei, Yao Sun, Junyu Lin, Si Liu, Learning Adaptive Receptive Fields for Deep Image
+                                    Parsing Network, Computational Visual Media 2018[
+                                    <a href="pdf/CVM camera-ready.pdf">Full paper</a>]</p>
+                                  <p> 3. Xiaobo Wang, Shifeng Zhang, Zhen Lei, Si Liu, Xiaojie Guo, Stan Z. Li, Ensemble Soft-Margin
+                                    Softmax Loss for Image Classification, IJCAI 2018[
+                                    <a href="pdf/ijcai_2018.pdf">Full paper</a>]</p>
+                                </div>
+                                <div class="clear"></div>
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </article>
+                  </article>
+                </div>
               </div>
-            </div>
-          </section>
-        </div>
-        <!-- footer -->
-        <div id="footer-tail">
-          <footer>
-            <div class="inner">
-              <div class="wrapper">
-              <div class="block-1">
-                  <dl class="list-1">
-                    <dt>  <img src="images/iie_cas.gif" /></dt>
+            </section>
+          </div>
+          <!-- footer -->
+          <div id="footer-tail">
+            <footer>
+              <div class="inner">
+                <div class="wrapper">
+                  <div class="block-1">
+                    <dl class="list-1">
+                      <dt>
+                        <img src="images/iie_cas.gif" />
+                      </dt>
 
-                  </dl>
-                  <p>
-                    <!-- {%FOOTER_LINK} -->
-                  </p>
-                </div>
-                <div class="block-2">
-                  <dl class="list-1">
-                    <dd> <p>Copyright (C) 2017,  S-Lab @ CAS</p>
-</dd>
-                  </dl>
+                    </dl>
+                    <p>
+                      <!-- {%FOOTER_LINK} -->
+                    </p>
+                  </div>
+                  <div class="block-2">
+                    <dl class="list-1">
+                      <dd>
+                        <p>Copyright (C) 2017, S-Lab @ CAS</p>
+                      </dd>
+                    </dl>
+                  </div>
                 </div>
               </div>
-            </div>
-          </footer>
+            </footer>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<script type="text/javascript"> Cufon.now(); </script>
+  <script type="text/javascript"> Cufon.now(); </script>
 </body>
+
 </html>
