--- a/publication.html
+++ b/publication.html
@@ -119,6 +119,9 @@
                                   <p> 3. Xiaobo Wang, Shifeng Zhang, Zhen Lei, Si Liu, Xiaojie Guo, Stan Z. Li, Ensemble Soft-Margin
                                     Softmax Loss for Image Classification, IJCAI 2018[
                                     <a href="pdf/ijcai_2018.pdf">Full paper</a>]</p>
+                                  <p> 4. Tingting Li, Ruihe Qian, Chao Dong, Si Liu, Qiong Yan, Wenwu Zhu, Liang Lin, BeautyGAN: Instance-level Facial Makeup Transfer with Deep
+                                    Generative Adversarial Network, ACM MM 2018[
+                                    <a href="pdf/BeautyGAN-camera-ready.pdf">Full paper</a>]</p>
                                 </div>
                                 <div class="clear"></div>
                               </div>
