--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@ var _hmt = _hmt || [];
                                         <p>[2017-07-09]</p>
                                         <div class="image-desc">
                                           <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017[<a href="pdf/faceaging-acmmm2017.pdf">Full paper</a>]</p>
-<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
-<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017
+<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang, Fast Deep Matting for Portrait Animation on Mobile Phone, ACM MM 2017</p>
+<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei,Magic-wall: Visualizing Room Decoration, ACM MM 2017
  </p>
- <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>].[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
+ <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision, ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>].[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
  </p>
- <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system， ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
+ <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system, ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
  </p>
                                           </div>
                                       </div>
@@ -206,10 +206,10 @@ var _hmt = _hmt || [];
                                     <li> <a class="thumb" name="leaf" href="images/pub-big-3.jpg" title="Title #0"> <img alt="" src="images/pub-3.jpg"  width="227" height="147"/> </a>
                                       <div class="caption">
                                         <h3> &bull; Prof. Liu took part in the 2017 CCF Young Elite Forum and is selected to give a talk in CNCC 2017. </h3>
-                                        <h3> &bull; 刘偲老师参加2017 CCF青年精英大会 (http://www.ccf.org.cn/hdhy/qnjydh/) ， 并被推选赴2017中国计算机大会(CNCC)进行演讲</h3>
+                                        <h3> &bull; 刘偲老师参加2017 CCF青年精英大会 (http://www.ccf.org.cn/hdhy/qnjydh/) , 并被推选赴2017中国计算机大会(CNCC)进行演讲</h3>
                                         <div class="image-desc">
                                          <p>[2017-05-20]</p>
-                                          <p>  &nbsp; &nbsp; &nbsp; &nbsp; On May 20th ，Prof. Liu took part in the 2017 CCF Young Elite Forum organized by China Computer Federation (CCF)  in China National Convention Center.  She introduced her recent work on “pixelwise image semantic understanding” . She was selected to give a talk in the China National Computer Congress, 2017 on Oct 26th - 28th .</p>
+                                          <p>  &nbsp; &nbsp; &nbsp; &nbsp; On May 20th ,Prof. Liu took part in the 2017 CCF Young Elite Forum organized by China Computer Federation (CCF)  in China National Convention Center.  She introduced her recent work on “pixelwise image semantic understanding” . She was selected to give a talk in the China National Computer Congress, 2017 on Oct 26th - 28th .</p>
                                         </div>
                                       </div>
                                     </li>
