--- a/publication_2017.html
+++ b/publication_2017.html
@@ -84,13 +84,13 @@ var _hmt = _hmt || [];
 
  <p>------------------------ Conference Papers ------------------------</p>
 <p> 1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017[<a href="pdf/faceaging-acmmm2017.pdf">Full paper</a>]</p>
-<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017[<a href="pdf/portrait-acmmm2017.pdf">Full paper</a>]</p>
-<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017[<a href="pdf/magicwall-acmmm2017.pdf">Full paper</a>]</p>
-<p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun, Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>][<a href="http://liusi-group.com/projects/RSVP">Details</a>]
+<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang, Fast Deep Matting for Portrait Animation on Mobile Phone, ACM MM 2017[<a href="pdf/portrait-acmmm2017.pdf">Full paper</a>]</p>
+<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei,Magic-wall: Visualizing Room Decoration, ACM MM 2017[<a href="pdf/magicwall-acmmm2017.pdf">Full paper</a>]</p>
+<p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun, Changhu Wang, Hanqing Lu  and Si Liu, RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision, ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>][<a href="http://liusi-group.com/projects/RSVP">Details</a>]
  </p>
- <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan， Time Traveler: a real-time face aging system， ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
+ <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system, ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
  </p>
-<p> 6. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. [<a href="pdf/AdaptiveReceptiveFields-cvpr2017.pdf">Demo paper</a>] </p>
+<p> 6. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017 [<a href="pdf/AdaptiveReceptiveFields-cvpr2017.pdf">Demo paper</a>] </p>
 <p> 7.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="pdf/Surveillance Video Parsing with Single Frame Supervision(final version).pdf">Paper</a>].[<a href="http://liusi-group.com/projects/SVP">Details</a>]</p>
 
                              </div>
