--- a/seminar.html
+++ b/seminar.html
@@ -81,7 +81,7 @@ var _hmt = _hmt || [];
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡) Weibo Zhang(张卫博)-->
                                 
                                 <tr>
-                                <td><p> Wednesday, October 10 2018, 19:00 </p></td>
+                                <td><p> Wednesday, 10 October 2018, 19:00 </p></td>
                                 <td><small>Lejian Ren(任乐健)</small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1fZ3-y6aEFf_01dTpclQAOA">ECCV report</a></i></td></tr>
                                 
