--- a/projects/FACTS.html
+++ b/projects/FACTS.html
@@ -109,8 +109,8 @@
                                 </p>
                                 <h3>Dataset</h3>
                                 <p>
-                                  You can download the Indoor and iLIDS-Parsing Dataset from
-                                  <a href="https://pan.baidu.com/s/1SjXo47SVIEmiky2xOOltjw">Baidu Drive</a>(pwd: 63qi). Outdoor and Daily Dataset will be released soon.
+                                  You can download the Indoor, Outdoor, iLIDS-Parsing and Daily Dataset from
+                                  <a href="https://pan.baidu.com/s/1SjXo47SVIEmiky2xOOltjw">Baidu Drive</a>(pwd: 63qi).
                                 </p>
                                 <h3>Introduction </h3>
                                 <p>
