--- a/projects/FACTS.html
+++ b/projects/FACTS.html
@@ -110,7 +110,8 @@
                                 <h3>Dataset</h3>
                                 <p>
                                   You can download the Indoor, Outdoor, iLIDS-Parsing and Daily Dataset from
-                                  <a href="https://pan.baidu.com/s/1SjXo47SVIEmiky2xOOltjw">Baidu Drive</a>(pwd: 63qi).
+                                  <a href="https://pan.baidu.com/s/1SjXo47SVIEmiky2xOOltjw">Baidu Drive</a>(pwd: 63qi) or
+                                  <a href="https://drive.google.com/drive/folders/1fzN1eJ7nGYDQPFmKTPuSAf5-oHPQS7s3?usp=sharing">Google Drive</a>
                                 </p>
                                 <h3>Introduction </h3>
                                 <p>
