--- a/projects/PP-GANs.html
+++ b/projects/PP-GANs.html
@@ -1,18 +1,14 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="Video Event Detection" />
-    <meta name="keywords" content="Constraint Flow" />
-    <meta name="author" content="Wei Zhen" />
+    <meta name="description" content="PP-GANs" />
+    <meta name="keywords" content="GANs" />
+    <meta name="author" content="" />
     <link rel="stylesheet" href="css/SPR.css" type="text/css" />
     <title>PP-GANs: Pull and Push GANs For Large-gap and Adjacent Face Aging</title>
 </head>
-
-
 <body>
-
 
 <!-- --------------------------------
 -
@@ -67,8 +63,6 @@
         <div class="nline1"></div>
     </div>
 </div>
-
-
 
 <!-- --------------------------------
 -
