--- a/projects/PP-GANs.html
+++ b/projects/PP-GANs.html
@@ -5,9 +5,11 @@
     <meta name="description" content="PP-GANs" />
     <meta name="keywords" content="GANs" />
     <meta name="author" content="" />
-    <link rel="stylesheet" href="css/SPR.css" type="text/css" />
+    <link href="../css/PP-GANs.css" rel="stylesheet" type="text/css" />
     <title>PP-GANs: Pull and Push GANs For Large-gap and Adjacent Face Aging</title>
 </head>
+
+
 <body>
 
 <!-- --------------------------------
@@ -154,20 +156,23 @@
 <div id="cont">
     <div class="wrap">
         <h2 id="subject">Performance</h2>
-
-    <!-- --------------------------------
-    -
-    - References
-    -
-    ---- --------------------------------
-    -->
-    <div id="cont">
-        <div class="wrap">
-            <h2 id="subject">References</h2>
-            <ul class="ref-list" align="justify">
-
-            </ul>
-        </div>
     </div>
+</div>
+
+<!-- --------------------------------
+-
+- References
+-
+---- --------------------------------
+-->
+<div id="cont">
+    <div class="wrap">
+        <h2 id="subject">References</h2>
+        <ul class="ref-list" align="justify">
+
+        </ul>
+    </div>
+</div>
+
 </body>
 </html>
