--- a/projects.html
+++ b/projects.html
@@ -78,21 +78,45 @@ var _hmt = _hmt || [];
         <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
       </td>
     </tr>
+
     <tr>
       <td><p></p></td>
     </tr>
+
     <tr>
       <td>
         <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
       </td>
     </tr>
+
     <tr>
       <td><p></p></td>
     </tr>
+
     <tr>
       <td>
         <a href="projects/FaceAging">&bull; Time Traveler: a real-time face aging system</a>
       </td>
+    </tr>
+
+    <tr>
+        <td><p></p></td>
+    </tr>
+
+    <tr>
+        <td>
+            <a href="projects/PP-GANs">&bull; PP-GANs: Pull and Push GANs For Large-gap and Adjacent Face Aging</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td><p></p></td>
+    </tr>
+
+    <tr>
+        <td>
+            <a href="projects/BeautyGAN">&bull; BeautyGAN: Instance-level Facial Makeup Transfer with Deep GAN</a>
+        </td>
     </tr>
 
   </tbody>
