--- a/projects/BeautyGAN.html
+++ b/projects/BeautyGAN.html
@@ -149,6 +149,8 @@
 <div id="cont">
     <div class="wrap">
         <h2 id="subject">Performance</h2>
+        <p align="justify" style="text-indent:2em">
+        <U><I>Still in construction</I></U>
     </div>
 </div>
 
@@ -161,6 +163,8 @@
 <div id="cont">
     <div class="wrap">
         <h2 id="subject">References</h2>
+        <p align="justify" style="text-indent:2em">
+        <U><I>Still in construction</I></U>
         <ul class="ref-list" align="justify">
 
         </ul>
