--- a/projects/PP-GANs.html
+++ b/projects/PP-GANs.html
@@ -144,6 +144,8 @@
                 the deep network backbone predicts N attention maps to weight the corresponding sampler sampling
                 results to obtain weighted-sample features. Finally, the high-level features, weighted-sample
                 features and conditional information are combined to generate image that satisfies the input condition.
+                <br><br>
+                <U><I>Still in construction</I></U>
             </p>
         </div>
         <div class="line"></div>
@@ -156,6 +158,9 @@
 <div id="cont">
     <div class="wrap">
         <h2 id="subject">Performance</h2>
+        <p align="justify" style="text-indent:2em">
+            <U><I>Still in construction</I></U>
+        </p>
     </div>
 </div>
 
@@ -168,6 +173,9 @@
 <div id="cont">
     <div class="wrap">
         <h2 id="subject">References</h2>
+        <p align="justify" style="text-indent:2em">
+            <U><I>Still in construction</I></U>
+        </p>
         <ul class="ref-list" align="justify">
 
         </ul>
