Add link of Google Drive

--- a/projects/BeautyGAN.html
+++ b/projects/BeautyGAN.html
@@ -90,19 +90,19 @@
             <p align="justify" style="text-indent:2em">
                 Facial makeup transfer aims to translate the makeup style from a given reference makeup
                 face image to another non-makeup one while preserving face identity. Such an instance-level
-                transfer prob- lem is more challenging than conventional domain-level transfer tasks,
-                especially when paired data is unavailable. Makeup style is also di erent from
-                global styles (e.g., paintings) in that it con- sists of several local styles/cosmetics,
-                including eye shadow, lip- stick, foundation, and so on. Extracting and transferring
+                transfer problem is more challenging than conventional domain-level transfer tasks,
+                especially when paired data is unavailable. Makeup style is also different from
+                global styles (e.g., paintings) in that it consists of several local styles/cosmetics,
+                including eye shadow, lip-stick, foundation, and so on. Extracting and transferring
                 such local and delicate makeup information is infeasible for existing style transfer methods.
                 We address the issue by incorporating both global domain-level loss and local instance-level
-                loss in an dual input/output Generative Adversarial Network, called BeautyGAN. Speci cally,
+                loss in an dual input/output Generative Adversarial Network, called BeautyGAN. Specically,
                 the domain-level transfer is ensured by discriminators that distinguish generated images
                 from domains’ real samples. The instance-level loss is calculated by pixel-level histogram
                 loss on separate local facial regions. We further introduce perceptual loss and
-                cycle consistency loss to generate high quality faces and pre- serve identity.
+                cycle consistency loss to generate high quality faces and preserve identity.
                 The overall objective function enables the network to learn translation on instance-level
-                through unsupervised adver- sarial learning. We also build up a new makeup dataset that
+                through unsupervised adversarial learning. We also build up a new makeup dataset that
                 consists of 3834 high-resolution face images. Extensive experiments show
             </p>
             <div class="line"></div>
@@ -121,7 +121,8 @@
             <p align="justify" style="text-indent:2em">
             </p>
                 Our dataset are available at
-                <a href="https://pan.baidu.com/s/1DwTj4DvPWZFNNd1RsfA6jg"><I><U>Baidu Drive</U></I></a>(pwd: 3z1a)
+                <a href="https://pan.baidu.com/s/1DwTj4DvPWZFNNd1RsfA6jg"><I><U>Baidu Drive</U></I></a>(pwd: 3z1a) and
+            <a href="https://drive.google.com/open?id=18UlvYDL6UGZ2rs0yaDsSzoUlw8KI5ABY"><I><U>Google Drive</U></I></a>
             <div class="line"></div>
     </div>
 </div>
