--- a/projects/BeautyGAN.html
+++ b/projects/BeautyGAN.html
@@ -120,8 +120,8 @@
         <h2 id="subject">Dataset</h1>
             <p align="justify" style="text-indent:2em">
             </p>
-                Our dataset are available at
-                <a href="https://pan.baidu.com/s/1DwTj4DvPWZFNNd1RsfA6jg"><I><U>Baidu Drive</U></I></a>(pwd: 3z1a) and
+                Our dataset is available at
+                <a href="https://pan.baidu.com/s/1DwTj4DvPWZFNNd1RsfA6jg"><I><U>Baidu Drive</U></I></a> (pwd: 3z1a) and
             <a href="https://drive.google.com/open?id=18UlvYDL6UGZ2rs0yaDsSzoUlw8KI5ABY"><I><U>Google Drive</U></I></a>
             <div class="line"></div>
     </div>
@@ -139,7 +139,11 @@
         <p align="justify" style="text-indent:2em">
         </p>
             Our paper:
-            <a href="../pdf/BeautyGAN-camera-ready_2.pdf"><I><U>BeautyGAN.pdf</U></I></a>
+            <a href="../pdf/BeautyGAN-camera-ready_2.pdf"><I><U>BeautyGAN.pdf</U></I></a><BR><BR>
+            Our poster:
+            <a href="../pdf/BeautyGAN-camera-ready_2_poster.pdf"><I><U>Poster.pdf</U></I></a><BR><BR>
+            PPT is available at
+            <a href="https://pan.baidu.com/s/1OjrHGpUvNjcyLgr3y37oOg"><I><U>Baidu Drive</U></I></a> (pwd: ag72)
         <div class="line"></div>
     </div>
 </div>
