--- a/seminar.html
+++ b/seminar.html
@@ -90,7 +90,7 @@ var _hmt = _hmt || [];
                                 
                                 <tr>
                                 <td><p> Tuesday, 4 December 2018, 19:00 </p></td>
-                                <td><small>Shaofei Huang(黄少飞)</small></td>
+                                <td><small>Chen Gao(高晨)</small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1T50GJZWpLXm1H-hKZQBnEA">Shift-Net Image Inpainting via Deep Feature Rearrangement</a></i></td></tr>
                                 
                                 <tr>
