--- a/projects/FACTS.html
+++ b/projects/FACTS.html
@@ -161,12 +161,12 @@ permalink: projects/FACTS
                                   <div class="image-wrapper">
                                     <div class="image featured">
                                       <video width="675" height="382" autoplay controls="controls">
-                                        <source src="../videos/FACTS/facts.MP4" type="video/mp4" />
+                                        <source src="../videos/FACTS/facts.mp4" type="video/mp4" />
                                         <source src="../videos/FACTS/facts.ogg" type="video/ogg" />
                                         <source src="../videos/FACTS/facts.webm" type="video/webm" /> Your browser does not support the video tag.
                                       </video>
                                     </div>
-                                    <p> <b>Note: the area of neck is labeled as background in groudtruth.
+                                    <p> <b>Note: the area of neck is labeled as background in groudtruth and only one target human are segmented.
                                       </b>
                                       </p>
                                   </div>
