delete the logo

--- a/publication_2014.html
+++ b/publication_2014.html
@@ -132,7 +132,7 @@ Retrieval.” Transactions on Multimedia Computing, Communications, and Applicat
               <div class="wrapper">
               <div class="block-1">
                   <dl class="list-1">
-                    <dt>  <img src="images/iie_cas.gif" /></dt>
+                    <dt>  <img src="" /></dt>
 
                   </dl>
                   <p>
@@ -141,7 +141,7 @@ Retrieval.” Transactions on Multimedia Computing, Communications, and Applicat
                 </div>
                 <div class="block-2">
                   <dl class="list-1">
-                    <dd> <p>Copyright (C) 2017,  S-Lab @ CAS</p>
+                    <dd> <p></p>
 </dd>
                   </dl>
                 </div>
