delete the logo

--- a/publication.html
+++ b/publication.html
@@ -147,7 +147,7 @@
                   <div class="block-1">
                     <dl class="list-1">
                       <dt>
-                        <img src="images/iie_cas.gif" />
+                        <img src=" " />
                       </dt>
 
                     </dl>
