--- a/people.html
+++ b/people.html
@@ -143,7 +143,7 @@ var _hmt = _hmt || [];
               <div class="wrapper">
               <div class="block-1">
                   <dl class="list-1">
-                    <dt>  <img src="images/iie_cas.gif" /></dt>
+                    <dt>  <img src=" " /></dt>
 
                   </dl>
                   <p>
