--- a/projects/FACTS.html
+++ b/projects/FACTS.html
@@ -197,7 +197,7 @@ permalink: projects/FACTS
                   <div class="block-1">
                     <dl class="list-1">
                       <dt>
-                        <img src="../images/iie_cas.gif" />
+                        <img src="../ " />
                       </dt>
 
                     </dl>
