--- a/projects/RSVP.html
+++ b/projects/RSVP.html
@@ -159,7 +159,7 @@ for person re-identification. In CVPR.</li>
               <div class="wrapper">
                <div class="block-1">
                   <dl class="list-1">
-                    <dt>  <img src="../images/iie_cas.gif" /></dt>
+                    <dt>  <img src="../ " /></dt>
                   
                   </dl>
                   <p>
