--- a/projects/SVP.html
+++ b/projects/SVP.html
@@ -195,7 +195,7 @@
                   <div class="block-1">
                     <dl class="list-1">
                       <dt>
-                        <img src="../images/iie_cas.gif" />
+                        <img src="../ " />
                       </dt>
 
                     </dl>
