--- a/seminar.html
+++ b/seminar.html
@@ -734,7 +734,7 @@ via Adversarial Data Augmentation<br>2.A-Fast-RCNN: Hard Positive Generation via
               <div class="wrapper">
                 <div class="block-1">
                   <dl class="list-1">
-                    <dt>  <img src="images/iie_cas.gif" /></dt>
+                    <dt>  <img src=" " /></dt>
 
                   </dl>
                   <p>
