--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,14 @@ var _hmt = _hmt || [];
             <a href="projects/BeautyGAN">&bull; BeautyGAN: Instance-level Facial Makeup Transfer with Deep GAN</a>
         </td>
     </tr>
+    <tr>
+        <td><p></p></td>
+    </tr>
+    <tr>
+        <td>
+            <a href="projects/FACTS">&bull; Fine-grained Human-centric Tracklet Segmentation with Single Frame Supervision</a>
+        </td>
+    </tr>
 
   </tbody>
 </table>
