--- a/projects/FaceAging.html
+++ b/projects/FaceAging.html
@@ -153,7 +153,7 @@ Particle Filter for Robust Visual Tracking. In CVPR.</li>
               <div class="wrapper">
                <div class="block-1">
                   <dl class="list-1">
-                    <dt>  <img src="../ " /></dt>
+                    <dt>  <img src=""></dt>
 
                   </dl>
                   <p>
