--- a/publication.html
+++ b/publication.html
@@ -109,6 +109,18 @@
                                     Semantic Collage for Image RetargetingComposing Semantic Collage for Image Retargeting,
                                     TIP 2018[
                                     <a href="pdf/tip18_retarget_3.31.pdf">Full paper</a>]</p>
+
+                                  <p>2.	Tianzhu Zhang, Si Liu, Changsheng Xu, Bin Liu, Ming-Hsuan Yang, Correlation Particle Filter for Visual Tracking, TIP 2018. [<a href="pdf/Correlation Particle Filter for Visual Tracking.pdf">Full Paper</a>]
+                                  </p>
+
+                                  <p>3. Zhiyong Chen, Si Liu, Yanlong Zhai, Jia Lin, Xiaochun Cao, Liang Yang. Human Parsing by Weak Structural Label. Multimedia Tools and Applications 2018[<a href="pdf/10.1007_s11042-017-5368-4.pdf">Full paper</a>]
+                                  </p>
+
+                                  <p>4.	Wei Wang, Chunping Wang, Si Liu,  Xiaochun Cao, Robust Target Tracking by Online Random Forests and Superpixels, IEEE Transactions on Circuits and Systems for Video Technology (TCSVT) 2018. [<a href="pdf/Robust-tcsvt-2016.pdf">Full Paper</a>]
+                                  </p>
+
+
+
                                   <p>------------------------ Conference Papers ------------------------</p>
                                   <p> 1. Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain
                                     Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018[
